--- a/css/styles.css
+++ b/css/styles.css
@@ -448,5 +448,236 @@ footer .logo {
  }
  .footer-social-links .link:hover, .footer-social-links .link:focus {
   background-color: #31d0aa;
-
  }
+
+ .footer-email-container {
+  margin-left: 80px;
+ }
+ 
+  .footer-form {
+  display: flex;
+  gap: 24px;
+  }
+
+  .input-email {
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  background: transparent;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+ }
+
+   .footer-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 165px;
+    height: 40px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    padding: 8px 24px;
+    color: #FFFFFF;
+    cursor: pointer;
+    border: none;
+   }
+
+   .email-container-icon {
+    margin-left: 16px;
+    fill: #FFFFFF;
+   }
+
+   .input-email::placeholder {
+   color: #ffffff;
+   font-size: 12px;
+   line-height: 2;
+   letter-spacing: 0.04em;
+   }
+ /*------bacgroup------*/
+
+ .backdrop {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vw;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  }
+
+  .is-open {
+  opacity: 1;
+  visibility:visible;
+  pointer-events: auto;
+  }
+
+ .modal {
+width: 408px;
+min-height: 584px;
+background-color:#FCFCFC;
+border-radius: 4px;
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+padding: 24px;
+ }
+
+ .modal-close {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 100%;
+width: 24px;
+height: 24px;
+background: #E7E9FC;
+margin-left: 336px;
+margin-bottom: 24px;
+cursor: pointer;
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:focus, .modal-close:hover {
+  background-color:#404BBF;
+  border: none;
+}
+
+.modal-close-icon {
+  fill:#2E2F42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-icon:focus, .modal-close-icon:hover {
+  fill:#FFFFFF;
+}
+
+ .modal-title {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2E2F42;
+margin-bottom: 16px;
+ }
+
+  .modal-field {
+margin-bottom: 8px;
+ }
+
+ .form-label {
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color:#8E8F99; 
+margin-bottom: 4px;
+ }
+
+.modal-input-wrap{
+position: relative;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #8E8F99;
+border-radius: 4px;
+padding-left: 38px;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8E8F99;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+ 
+
+.modal-input:focus, .modal-input:hover {
+  border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal-icon, .modal-input:hover + .modal-icon  {
+  fill: #4D5AE5;
+}
+
+.modal-icon {
+  fill:#2E2F42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-comment {
+   width: 100%;
+  height: 120px;
+  border: 1px solid #8E8F99;
+border-radius: 4px;
+padding: 8px 16px;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8E8F99;
+outline: transparent;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+resize: none;
+}
+
+.modal-button {
+  border-radius: 4px;
+ padding: 16px 32px;
+width: 169px;
+height: 56px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background:#4D5AE5;
+color: #FFFFFF;
+transition: bacground-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+margin-left: 95px;
+margin-top: 24px;
+}
+
+
+.check-text {
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8E8F99;
+display: flex;
+align-items: center;
+gap: 8px;
+}
+
+.check-text a {
+font-weight: 400;
+font-size: 12px;
+letter-spacing: 0.04em;
+line-height: 1.33;
+text-decoration: underline;
+color: #4D5AE5;
+
+}
+
+.check-text span {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+display: flex;
+align-items: center;
+justify-content: center;
+fill: transparent;
+}
+
+.form-check:checked + .check-text span {
+  background-color: #404BBF;
+  border: none;
+  fill: #ffffff;
+}
+
