--- a/css/styles.css
+++ b/css/styles.css
@@ -460,13 +460,21 @@ footer .logo {
   }
 
   .input-email {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
   border: 1px solid #ffffff;
+  color: #ffffff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
   padding: 8px 16px;
   background: transparent;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+ }
+
+ .input-email placeholder {
+  color: #ffffff;
  }
 
    .footer-btn {
@@ -527,11 +535,16 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 padding: 24px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .modal-close {
-    border: 1px solid rgba(0, 0, 0, 0.1);
-border-radius: 100%;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 50%;
 width: 24px;
 height: 24px;
 background: #E7E9FC;
@@ -582,17 +595,18 @@ position: relative;
 }
 
 .modal-input {
+  display: block;
   width: 100%;
   height: 40px;
-  border: 1px solid #8E8F99;
-border-radius: 4px;
+  border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.4);
 padding-left: 38px;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8E8F99;
-outline: transparent;
+background-color: transparent;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
