--- a/css/styles.css
+++ b/css/styles.css
@@ -536,10 +536,14 @@ left: 50%;
 transform: translate(-50%, -50%);
 padding: 24px;
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 72px 24px 24px 24px;
  }
 
  .modal-close {
+  display: flex;
   position: absolute;
+  align-items: center;
+   justify-content: center;
   top: 24px;
   right: 24px;
   padding: 0;
@@ -578,7 +582,7 @@ margin-bottom: 16px;
  }
 
   .modal-field {
-margin-bottom: 8px;
+ margin-bottom: 16px;
  }
 
  .form-label {
@@ -596,7 +600,8 @@ position: relative;
 
 .modal-input {
   display: block;
-  width: 100%;
+    width: 100%;
+  height: 100%;
   height: 40px;
   border-radius: 4px;
 border: 1px solid rgba(46, 47, 66, 0.4);
@@ -607,7 +612,9 @@ line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8E8F99;
 background-color: transparent;
+outline: transparent;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
 
@@ -630,28 +637,39 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-comment {
    width: 100%;
   height: 120px;
-  border: 1px solid #8E8F99;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
 border-radius: 4px;
 padding: 8px 16px;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
-color: #8E8F99;
+color: rgba(46, 47, 66, 0.4);
 outline: transparent;
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 resize: none;
 }
+.modal-comment:focus {
+  border-color: #4D5AE5;
+}
+ 
 
 .modal-button {
+   display: block;
+  cursor: pointer;
   border-radius: 4px;
+  border: none;
  padding: 16px 32px;
-width: 169px;
+min-width: 169px;
 height: 56px;
+font-weight: 50;
+line-height: 1.5;
+letter-spacing: 0.04em;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background:#4D5AE5;
 color: #FFFFFF;
-transition: bacground-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 margin-left: 95px;
 margin-top: 24px;
 }
