--- a/css/styles.css
+++ b/css/styles.css
@@ -663,7 +663,7 @@ resize: none;
  padding: 16px 32px;
 min-width: 169px;
 height: 56px;
-font-weight: 50;
+font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -696,15 +696,15 @@ color: #4D5AE5;
 
 }
 
-.check-text span {
-  width: 16px;
+.checkbox-area {
+   width: 16px;
   height: 16px;
-  border-radius: 2px;
-border: 1px solid rgba(46, 47, 66, 0.4);
-display: flex;
+  border-radius: 2px;border: 1px solid rgba(46, 47, 66, 0.4);
+display: inline-flex;
 align-items: center;
 justify-content: center;
 fill: transparent;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-check:checked + .check-text span {
