--- a/css/styles.css
+++ b/css/styles.css
@@ -511,11 +511,12 @@ footer .logo {
   position: fixed;
   top: 0;
   width: 100vw;
-  height: 100vw;
+  height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .is-open {
@@ -560,6 +561,7 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cu
 
 .modal-close:focus, .modal-close:hover {
   background-color:#404BBF;
+  fill: #ffffff;
   border: none;
 }
 
@@ -567,6 +569,7 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cu
   fill:#2E2F42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-close-icon:focus, .modal-close-icon:hover {
   fill:#FFFFFF;
 }
@@ -582,10 +585,11 @@ margin-bottom: 16px;
  }
 
   .modal-field {
- margin-bottom: 16px;
+ margin-bottom: 8px;
  }
 
  .form-label {
+  display: block;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.17;
@@ -650,6 +654,7 @@ outline: transparent;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 resize: none;
 }
+
 .modal-comment:focus {
   border-color: #4D5AE5;
 }
@@ -676,6 +681,7 @@ margin-top: 24px;
 
 
 .check-text {
+   display: block;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.17;
@@ -705,6 +711,9 @@ align-items: center;
 justify-content: center;
 fill: transparent;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-check {
+
 }
 
 .form-check:checked + .check-text span {
