--- a/css/styles.css
+++ b/css/styles.css
@@ -561,7 +561,6 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cu
 
 .modal-close:focus, .modal-close:hover {
   background-color:#404BBF;
-  fill: #ffffff;
   border: none;
 }
 
@@ -570,7 +569,7 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cu
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-icon:focus, .modal-close-icon:hover {
+.modal-close:focus, .modal-close:hover .modal-close-icon {
   fill:#FFFFFF;
 }
 
@@ -604,12 +603,13 @@ position: relative;
 
 .modal-input {
   display: block;
-    width: 100%;
+  width: 100%;
   height: 100%;
   height: 40px;
   border-radius: 4px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 padding-left: 38px;
+margin-bottom: 16px;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.17;
@@ -617,8 +617,7 @@ letter-spacing: 0.04em;
 color: #8E8F99;
 background-color: transparent;
 outline: transparent;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
  
 
@@ -692,14 +691,13 @@ align-items: center;
 gap: 8px;
 }
 
-.check-text a {
+.privacy-policy-link {
 font-weight: 400;
 font-size: 12px;
 letter-spacing: 0.04em;
 line-height: 1.33;
 text-decoration: underline;
 color: #4D5AE5;
-
 }
 
 .checkbox-area {
@@ -719,6 +717,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .form-check:checked + .check-text span {
   background-color: #404BBF;
   border: none;
-  fill: #ffffff;
+  fill: #F4F4FD;
 }
 
