--- a/css/styles.css
+++ b/css/styles.css
@@ -571,7 +571,7 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cu
  .modal-close:hover .modal-close-icon{
  fill:#FFFFFF; 
  }
- 
+
 .modal-close:focus .modal-close-icon {
   fill:#FFFFFF;
 }
@@ -685,6 +685,9 @@ margin-left: 95px;
 margin-top: 24px;
 }
 
+.modal-field-checkbox {
+  margin-bottom: 24px;
+}
 
 .check-text {
    display: block;
